--- a/inet1610/week4/index.html
+++ b/inet1610/week4/index.html
@@ -3,6 +3,7 @@
 Hello World!
 <ul>
 	<li><a href="c04/example.html">Exmple</a></li>
+	<li><a href="c04/example.html">Exmple</a></li>
 </ul>
 </body>
 </html>
